// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should generate TypeScript user imports with absolute paths 1`] = `
"// NOTE: This file is auto-generated by React Cosmos.
// It imports all fixture and decorator modules, making them available to the
// React Cosmos renderer along with the renderer config.

import type { RendererConfig, UserModuleWrappers } from 'react-cosmos-core';

import '/Users/ovidiu/cosmos/src/polyfills';
import '/Users/ovidiu/cosmos/src/global.css';

export const rendererConfig: RendererConfig = {
  "webSocketUrl": "ws://localhost:5002",
  "rendererUrl": null
};

const fixtures = {
  'src/Counter/Counter.fixture.tsx': { getModule: () => import('/Users/ovidiu/cosmos/src/Counter/Counter.fixture') },
  'src/CounterButton/CounterButton.fixture.tsx': { getModule: () => import('/Users/ovidiu/cosmos/src/CounterButton/CounterButton.fixture') }
};

const decorators = {
  'src/cosmos.decorator.tsx': { getModule: () => import('/Users/ovidiu/cosmos/src/cosmos.decorator') }
};

export const moduleWrappers: UserModuleWrappers = {
  lazy: true,
  fixtures,
  decorators
};
"
`;

exports[`should generate TypeScript user imports with relative paths 1`] = `
"// NOTE: This file is auto-generated by React Cosmos.
// It imports all fixture and decorator modules, making them available to the
// React Cosmos renderer along with the renderer config.

import type { RendererConfig, UserModuleWrappers } from 'react-cosmos-core';

import './polyfills';
import './global.css';

export const rendererConfig: RendererConfig = {
  "webSocketUrl": "ws://localhost:5002",
  "rendererUrl": null
};

const fixtures = {
  'src/Counter/Counter.fixture.tsx': { getModule: () => import('./Counter/Counter.fixture') },
  'src/CounterButton/CounterButton.fixture.tsx': { getModule: () => import('./CounterButton/CounterButton.fixture') }
};

const decorators = {
  'src/cosmos.decorator.tsx': { getModule: () => import('./cosmos.decorator') }
};

export const moduleWrappers: UserModuleWrappers = {
  lazy: true,
  fixtures,
  decorators
};
"
`;

exports[`should generate user imports with absolute paths 1`] = `
"// NOTE: This file is auto-generated by React Cosmos.
// It imports all fixture and decorator modules, making them available to the
// React Cosmos renderer along with the renderer config.

import '/Users/ovidiu/cosmos/src/polyfills.ts';
import '/Users/ovidiu/cosmos/src/global.css';

export const rendererConfig = {
  "webSocketUrl": "ws://localhost:5002",
  "rendererUrl": null
};

const fixtures = {
  'src/Counter/Counter.fixture.tsx': { getModule: () => import('/Users/ovidiu/cosmos/src/Counter/Counter.fixture.tsx') },
  'src/CounterButton/CounterButton.fixture.tsx': { getModule: () => import('/Users/ovidiu/cosmos/src/CounterButton/CounterButton.fixture.tsx') }
};

const decorators = {
  'src/cosmos.decorator.tsx': { getModule: () => import('/Users/ovidiu/cosmos/src/cosmos.decorator.tsx') }
};

export const moduleWrappers = {
  lazy: true,
  fixtures,
  decorators
};
"
`;

exports[`should generate user imports with relative paths 1`] = `
"// NOTE: This file is auto-generated by React Cosmos.
// It imports all fixture and decorator modules, making them available to the
// React Cosmos renderer along with the renderer config.

import './polyfills.ts';
import './global.css';

export const rendererConfig = {
  "webSocketUrl": "ws://localhost:5002",
  "rendererUrl": null
};

const fixtures = {
  'src/Counter/Counter.fixture.tsx': { getModule: () => import('./Counter/Counter.fixture.tsx') },
  'src/CounterButton/CounterButton.fixture.tsx': { getModule: () => import('./CounterButton/CounterButton.fixture.tsx') }
};

const decorators = {
  'src/cosmos.decorator.tsx': { getModule: () => import('./cosmos.decorator.tsx') }
};

export const moduleWrappers = {
  lazy: true,
  fixtures,
  decorators
};
"
`;
